Release the local ref immediately

The local refs are released by the JVM when we exit the function, but if
we need tons of local refs, JVM will not be happy.

Fixes: QTBUG-81077
Change-Id: Ic38a5be1a563cb9c2465f9f902ff6ae6c61e698b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>